# vector_db_mvp

./: .dockerignore  .gitignore  Dockerfile  README.md  cleanup_git.py  demo.py  docker-compose.yml  enable_redis.py  interactive_cli.py  pyproject.toml  quick_wipe_redis.py  test_system.py  wipe_redis.py
app/: main.py
app/adapters/embedding_providers/: cohere_provider.py
app/api/routers/: chunks.py  documents.py  interactive.py  libraries.py  search.py
app/concurrency/: __init__.py  read_write_lock.py
app/core/: config.py
app/indexing/: base.py  brute_force.py  lsh.py
app/models/: chunk.py  document.py  library.py  metadata.py
app/repositories/memory/: chunk_repo.py  document_repo.py  library_repo.py
app/repositories/redis/: __init__.py  chunk_repo.py  document_repo.py  library_repo.py
app/services/: chunk_service.py  document_service.py  library_service.py  search_service.py
app/temporal_workflows/: __init__.py  client.py  interactive_workflow.py  query_workflow.py  worker.py
tests/: test_crud.py
