[project]
name = "vector_db"
version = "0.1.0"
description = "A minimal vector database with FastAPI, Pydantic, and Temporal."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.3.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "temporalio>=1.9.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
